MOD: java_migration_guide.md